Working on the project page not completed yet. Darkmode needs to be fixed.

--- a/projectContent/mri-classification.mdx
+++ b/projectContent/mri-classification.mdx
@@ -3,6 +3,9 @@ import ModelButton from '@/components/ModelButton'
 
 # Brain MRI Classification Using CNNs
 
+> 🚧 **This page is a work in progress.**  
+> You can explore the full project now here --->>> [GitHub Link](https://github.com/Brum99/MRI_brain_tumor_prediction).
+
 <CustomImage src="/images/mri1.png" alt="MRI scan" width={800} height={400} />
 
 This project explores a CNN-based classifier to detect tumors in MRI scans.
