added project banners/headers

--- a/projectContent/mri-classification.mdx
+++ b/projectContent/mri-classification.mdx
@@ -20,4 +20,4 @@ This project explores a CNN-based classifier to detect tumors in MRI scans.
 
 ## Results
 
-<CustomImage src="/images/heatmap.png" alt="Grad-CAM heatmap" width={600} height={400} />
+<CustomImage src="/images/agent.png" alt="Grad-CAM heatmap" width={600} height={400} />
