commenting out unfinsihed areas of the project

--- a/projectContent/mri-classification.mdx
+++ b/projectContent/mri-classification.mdx
@@ -143,6 +143,18 @@ This is a crucial step in building automated systems that could eventually aid i
 
 </div>
 
+
+
+<div className = "w-1/2 mx-auto text-center mb-5">
+
+
+> 🚧 **More to come!**  
+> Explore the complete implementation: [GitHub Repository](https://github.com/Brum99/MRI_brain_tumor_prediction)
+</div>
+
+
+{/* 
+
 ---
 
 <ModelButton endpoint="/api/predict" />
@@ -253,3 +265,5 @@ This project demonstrates the significant potential of deep learning in medical 
 The intersection of artificial intelligence and medical imaging represents one of the most promising frontiers for improving patient outcomes. However, the path from research prototype to clinical implementation requires meticulous attention to safety, efficacy, and ethical considerations that this project has endeavored to address comprehensively.
 
 ---
+
+*/}
