update resume and mri-project

--- a/projectContent/mri-classification.mdx
+++ b/projectContent/mri-classification.mdx
@@ -20,7 +20,7 @@ import ModelButton from '@/components/ModelButton'
 
     Before diving into the technical implementation of this project, it's essential
     to understand **why this work matters**. Brain tumor detection is not just a 
-    computational challenge — it’s a life-critical task with real-world 
+    computational challenge, it’s a life critical task with real world 
     implications. The types of tumors discussed here differ dramatically in 
     prognosis, treatment approach, and urgency. By establishing a clear clinical 
     picture of these conditions, we can better appreciate the role that machine 
