Project Update added to MRI

--- a/projectContent/mri-classification.mdx
+++ b/projectContent/mri-classification.mdx
@@ -146,6 +146,16 @@ This is a crucial step in building automated systems that could eventually aid i
 
 
 <div className = "w-1/2 mx-auto text-center mb-5">
+### Project In Progress: CNN-Based Brain Tumour Classification  
+*Last updated: 23 June 2025*
+
+This project is currently under active development. I am building a deep learning pipeline to classify brain tumours from MRI images using convolutional neural networks (CNNs). The base model is currently implemented using a heavyweight architecture (Xception) and trained on a labelled dataset of glioma, meningioma, pituitary tumours and healthy images.
+
+I am now conducting a series of controlled experiments to investigate how different CNN architectures — lightweight (e.g. MobileNetV2), midweight and heavyweight models — affect classification performance. These experiments also explore the impact of regularisation techniques such as dropout and architectural modifications on model generalisation.
+
+The goal is to produce a robust and well-documented comparison of CNN design choices and their influence on tumour classification accuracy, recall and precision.
+
+Check back soon for updates, results and interactive visualisations.
 
 
 > 🚧 **More to come!**  
